# njones-vst

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
eris/: .gitignore  CMakeLists.txt  eris.iss
eris/mac/: Info.plist
eris/resource/: eris.rc  eris.uidesc
eris/source/: block_processor.h  eris.cpp  eris.h  erisparamids.h  erisuimessagecontroller.h  pitch_set.cpp  pitch_set.h  version.h
eris/src/: eris.cpp  eris.h  erisuimessagecontroller.h
src/: CMakeLists.txt
